[gd_scene load_steps=11 format=3 uid="uid://ck6vo5d385q3c"]

[ext_resource type="Script" path="res://scenes/weapons/pistol/pistol_bullet/pistol_bullet.gd" id="1_haia6"]
[ext_resource type="Texture2D" uid="uid://j0nffnyecxye" path="res://scenes/weapons/pistol/pistol_bullet/bullet.png" id="2_6pqw6"]
[ext_resource type="PackedScene" uid="uid://jfbffly5rjbc" path="res://scenes/components/health_component.tscn" id="2_i4pkq"]
[ext_resource type="PackedScene" uid="uid://b151mbj1k8ah8" path="res://scenes/explosion/explosion.tscn" id="2_wcckn"]
[ext_resource type="Script" path="res://scenes/weapons/pistol/pistol_bullet/bullet_trail.gd" id="3_38db2"]
[ext_resource type="PackedScene" uid="uid://0vth6qt1d50l" path="res://scenes/components/projectile_hurtbox_component.tscn" id="4_hmcoo"]
[ext_resource type="PackedScene" uid="uid://cryx377fes7t2" path="res://scenes/components/hitbox_component.tscn" id="4_p18sw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_fdwcm"]
radius = 4.0

[sub_resource type="Curve" id="Curve_ctexi"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_1u0d0"]
colors = PackedColorArray(1, 1, 1, 0, 0.98, 0.638633, 0.049, 0.694118)

[node name="PistolBullet" type="Node2D" node_paths=PackedStringArray("hitbox_component")]
top_level = true
script = ExtResource("1_haia6")
hitbox_component = NodePath("HitboxComponent")
explosion_scene = ExtResource("2_wcckn")

[node name="HealthComponent" parent="." instance=ExtResource("2_i4pkq")]
max_health = 1.0
enable_floating_text = false

[node name="ProjectileHurtboxComponent" parent="." instance=ExtResource("4_hmcoo")]
collision_mask = 320

[node name="CollisionShape2D" type="CollisionShape2D" parent="ProjectileHurtboxComponent"]
shape = SubResource("CircleShape2D_fdwcm")

[node name="HitboxComponent" parent="." instance=ExtResource("4_p18sw")]
collision_layer = 8
reload_time = 0.0
damage = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CircleShape2D_fdwcm")

[node name="Line2D" type="Line2D" parent="."]
modulate = Color(1.5, 1.5, 1.5, 1)
top_level = true
width = 3.0
width_curve = SubResource("Curve_ctexi")
gradient = SubResource("Gradient_1u0d0")
script = ExtResource("3_38db2")

[node name="Bullet" type="Sprite2D" parent="."]
texture = ExtResource("2_6pqw6")
